adding subscription option to the UI

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -68,6 +68,9 @@
                             </button>
                         </div>
                     </div>
+                    <div class="form-row">
+                        <nb-checkbox formControlName="stratumEnonceSubscribe">Enable Extranonce Subscribe</nb-checkbox>
+                    </div>
                 </nb-card-body>
             </nb-tab>
 
@@ -106,6 +109,9 @@
                                     pack="eva"></nb-icon>
                             </button>
                         </div>
+                    </div>
+                    <div class="form-row">
+                        <nb-checkbox formControlName="fallbackStratumEnonceSubscribe">Enable Extranonce Subscribe</nb-checkbox>
                     </div>
                 </nb-card-body>
             </nb-tab>
