added frequency setting of version rolling

--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
@@ -46,6 +46,12 @@
         flex: 1;
     }
 
+    .form-control-wrapper-no-label {
+        flex: 1;
+        margin-left: 115px;
+        margin-top: -10px;
+    }
+
     .password-container {
         display: flex;
         align-items: center;
