--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.html
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.html
@@ -165,7 +165,28 @@
                         <label for="jobInterval" class="form-label">Job Interval:</label>
                         <div class="form-control-wrapper">
                             <input nbInput id="jobInterval" formControlName="jobInterval" type="number" /><br />
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-control-wrapper-no-label">
                             <small>Mining job switching time in milliseconds.</small>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                    <label for="vrFrequency" class="form-label">VR-Frequency:</label>
+                    <div class="form-control-wrapper">
+                        <input nbInput id="vrFrequency" formControlName="vrFrequency" type="number" /><br />
+                    </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-control-wrapper-no-label">
+                            <small>
+                            Version Rolling Frequency.<!-- (Default <b>{{ defaultVrFrequency | number:'1.3-3' }} Hz</b>).-->
+                            </small>
+                            <br/>
+                            <small>
+                            Calculated wrap-around time: <b>{{ wrapAroundTime | number:'1.2-2' }} s</b>
+                            </small>
                         </div>
                     </div>
                     <div class="form-row">
