--- a/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
+++ b/main/http_server/axe-os/src/app/pages/edit/edit.component.scss
@@ -169,5 +169,6 @@
         transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out !important; // Smooth transition
     }
 
+    .btn-support { user-select: none; }
 
 }
