changed efficiency calculation to the hashRate field, enabled 0x8c reading for nerdaxe gamma

--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -82,7 +82,7 @@
             <div class="d-flex justify-content-between align-items-center mb-3">
               <div>
                 <div class="font-weight-bold text-lg">
-                  {{ info.power / (info.hashRate_10m / 1000) | number: '1.2-2' }}
+                  {{ info.power / (info.hashRate / 1000) | number: '1.2-2' }}
                   <small>J/Th</small>
                 </div>
               </div>
