--- a/main/http_server/axe-os/src/app/pages/home/home.component.html
+++ b/main/http_server/axe-os/src/app/pages/home/home.component.html
@@ -10,6 +10,14 @@
         <nb-card class="h-100">
           <nb-card-header>
             <span class="text-hint">Hash Rate</span>
+            <nb-icon
+              icon="question-mark-circle-outline" pack="eva" class="ms-1 icon-xxs icon-help-muted"
+              nbTooltip="Hashrate reported by the ASICs."
+              [nbTooltipTrigger]="NbTrigger.CLICK"
+              nbTooltipPlacement="top">
+            </nb-icon>
+
+
           </nb-card-header>
           <nb-card-body>
             <div class="d-flex justify-content-between align-items-center mb-3">
@@ -127,6 +135,12 @@
         <nb-card>
           <nb-card-header>
             <span class="text-hint">Hash Rate Chart</span>
+            <nb-icon
+              icon="question-mark-circle-outline" pack="eva" class="ms-1 icon-xxs icon-help-muted"
+              nbTooltip="Hashrate estimated by found shares."
+              [nbTooltipTrigger]="NbTrigger.CLICK"
+              nbTooltipPlacement="top">
+            </nb-icon>
           </nb-card-header>
           <nb-card-body>
             <canvas #myChart width="400" height="400"></canvas>
