Add internationalization (i18n) support to web interface
- Add ngx-translate configuration and 6 language support (EN, FR, ES, DE, IT, RO)
- Create comprehensive translation files with 100+ keys per language
- Implement modern language selector with flags in header
- Add NgRx Store integration for language state management
- Translate home page components and common elements
- Add localStorage persistence for language preference
- Include complete documentation in INTERNATIONALIZATION.md

--- a/main/http_server/axe-os/src/app/@i18n/container/language-selector/language-selector.component.html
+++ b/main/http_server/axe-os/src/app/@i18n/container/language-selector/language-selector.component.html
@@ -1,4 +1,33 @@
-<div>
-  <button (click)="setLanguage('en')">EN</button>
-  <button (click)="setLanguage('fr')">FR</button>
+<div class="language-selector">
+  <nb-select
+    placeholder="Language"
+    [value]="currentLanguage$ | async"
+    (selectedChange)="setLanguage($event)"
+    shape="semi-round"
+    size="small">
+    <nb-option value="en">
+      <span class="flag-icon flag-icon-us"></span>
+      English
+    </nb-option>
+    <nb-option value="fr">
+      <span class="flag-icon flag-icon-fr"></span>
+      Français
+    </nb-option>
+    <nb-option value="es">
+      <span class="flag-icon flag-icon-es"></span>
+      Español
+    </nb-option>
+    <nb-option value="de">
+      <span class="flag-icon flag-icon-de"></span>
+      Deutsch
+    </nb-option>
+    <nb-option value="it">
+      <span class="flag-icon flag-icon-it"></span>
+      Italiano
+    </nb-option>
+    <nb-option value="ro">
+      <span class="flag-icon flag-icon-ro"></span>
+      Română
+    </nb-option>
+  </nb-select>
 </div>
