--- a/main/http_server/axe-os/src/app/@theme/components/header/header.component.html
+++ b/main/http_server/axe-os/src/app/@theme/components/header/header.component.html
@@ -24,6 +24,7 @@
     </nb-action>
     -->
   </nb-actions>
+  <app-language-selector></app-language-selector>
   <nb-select [selected]="currentTheme" (selectedChange)="changeTheme($event)" status="primary">
     <nb-option *ngFor="let theme of themes" [value]="theme.value"> {{ theme.name }}</nb-option>
   </nb-select>
